# auto-gpt

./: Cargo.toml  Dockerfile  README.Docker.md  README.md  docker-compose.yml
add/src/: lib.rs
llm_proc_macro/: Cargo.toml
src/: collections.rs  macros.rs  main.rs  mod_async.rs  my_func.rs  my_funcs.rs  polymorfism.rs  proc_macro.rs  traits.rs
src/other_funcs/: minus_funcs.rs
