workspace = { members = [ "llm_proc_macro","add",] }
[package]
name = "auto-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.4"
reqwest = { version = "0.11.18", features = ["json"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"]}
llm_proc_macro = { path = "C:/Users/User/pessoal/first_steps/llm_proc_macro"}
